--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ reddit-data.json filter=lfs diff=lfs merge=lfs -text
 *.ipynb filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
+twitter_sentiment_train.csv filter=lfs diff=lfs merge=lfs -text
